# graphics_exp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  compile_commands.json
.scripts/: aclean.sh  amake.sh  arun.sh  assets.sh  check.sh  clean.sh  cmake.sh  common.sh  compile.sh  config.sh  generate_flatbuffers.sh  generate_proto.sh  package.sh  run.sh
ctx/developing/: Containerfile.dev  build.sh
ctx/packaging/: cube-example  cube-example.desktop
data/gl/: debug_primitives.fbs  shader.fbs
exp/: 02_cube.cc  Amake.py  CMakeLists.txt  camera.h  context.h
exp/amake/: atlas.py  cubemap.py  primitives.py  requirements.txt  shader.py
exp/amake/data/gl/: ShaderStage.py
exp/amake/data/gl/debug/: DebugPrimitiveModel.py  DebugPrimitiveVertex.py
exp/assets/images/atlas/: atari_8bit_font.atlas.json
exp/assets/images/cubemaps/: rogland_clear_night_4k.cubemap.json
exp/assets/models/primitives/: base.primitives.json
exp/assets/shaders/: debug.shader
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
gfx/: CMakeLists.txt
gfx/cmake/: AssetForge.cmake
gfx/ext/: temp.py
gfx/ext/glad/src/: glad.c
gfx/idl/: debug_primitives.proto  pbr_meta.proto  shader.proto
gfx/include/common/: cm.h  log.h  mem.h  struct.h  types.h
gfx/include/exp/: camera.h  context.h  game.h
gfx/include/gl/: core.h  debug.h  gl.h  pbr.h
gfx/include/gl/data/: debug_primitives_generated.h  texture_pool_generated.h
gfx/include/proto/: debug_primitives.pb.h  pbr_meta.pb.h  shader.pb.h
gfx/src/common/: CMakeLists.txt  mem.cc  struct.cc
gfx/src/exp/: 00_helloworld.cc  01_window.cc  02_cube.cc  CMakeLists.txt
gfx/src/gl/: CMakeLists.txt  core.cc  debug.cc  pbr.cc  symbol.cc
gfx/src/gl/data/: pbr_meta.fbs
gfx/src/proto/: debug_primitives.pb.cc  pbr_meta.pb.cc  shader.pb.cc
gfx/src/vk/: CMakeLists.txt  core.hpp  draw.hpp  game.hpp
include/common/: cm.h  mem.h  sys.h
include/gl/: core.h  debug.h  gl.h
include/gl/data/: shader_generated.h
sbx/: Amake.py  requirements.txt
sbx/GfxExpAmake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sbx/amake/: atlas.py  cubemap.py  log.txt  pbr.py  primitives.py  pyproject.toml  requirements.txt  setup.py  shader.py
sbx/amake/data/gl/: ShaderEntry.py  ShaderFile.py
sbx/amake/data/gl/debug/: DebugPrimitives.py
sbx/amake/data/gl/pbr/: TexturePool.py  TexturePoolList.py  TexturePoolType.py
sbx/amake/pipeline/: atlas.py  common.py  cubemap.py  linking.py  pbr.py  primitives.py  shader.py  tool.py
sbx/amake/proto/: .gitignore
src/common/: CMakeLists.txt  log.cc  sys.cc
src/common/linux/: sys.cc
src/common/win/: sys.cc
src/gl/: CMakeLists.txt  core.cc  debug.cc
src/vk/: core.cpp  draw.cpp  game.cpp
