[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "GfxExpAmake"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "AssetForge>=0.3.14",
    "Pillow>=8.0.0",
    "numpy",
    "opencv-python>=4.5.0",
    "trimesh",
    "scipy",
    "protobuf>=3.20.0,<4.0.0",
    "pygltflib",
]

# Package root is sbx/ (one level up from this file), where the `amake` package lives.
[tool.setuptools.packages.find]
where = [".."]
include = ["amake*"]
exclude = ["amake.build*"]
